The spacing issue between the images is finally fixed. I had to adjust my side margins -- they were keeping the images from having space between them. Again, always be mindful with margins. Now to fix the BTT button

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ body {
     background-size: cover;
     height: auto;
     min-height: 100vh;
-    margin-left: 7em;
-    margin-right: 7em;
+    margin-left: 4em;
+    margin-right: 4em;
     background-position: center center;
 }
 
@@ -59,7 +59,6 @@ h1 {
     height: 100%;
     position: relative;
     z-index: 1;
-    flex-direction: row;
     justify-content: space-around;
     align-items: flex-end;
 }
@@ -71,6 +70,7 @@ h1 {
     border-radius: 5%;
     position: relative;
     z-index: 5;
+    justify-content: space-around;
 }
 
 .flex-item.steak:hover .toolTip1 {
@@ -110,7 +110,7 @@ h1 {
     display: block;
     position: absolute;
     cursor: pointer;
-    pointer-events: none;  
+    pointer-events: none; 
 }
 
 .toolTip2 {
@@ -152,5 +152,5 @@ h1 {
     position: absolute;
     left: 50;
     right: 50;
-    margin-bottom: 20em;
+    margin-top: 10em;
 }
